--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -1678,6 +1678,18 @@
               href: ./kusto/api/monaco/monaco-kusto.md
             - name: Incorporer l’expérience utilisateur web dans un iFrame
               href: ./kusto/api/monaco/host-web-ux-in-iframe.md
+    - name: Bibliothèque de fonctions
+      items:
+        - name: Liste des fonctions
+          href: kusto/functions-library/functions-library.md
+        - name: quantize_udf()
+          href: kusto/functions-library/quantize-udf.md
+        - name: series_fit_poly_udf()
+          href: kusto/functions-library/series-fit-poly-udf.md
+        - name: series_moving_avg_udf()
+          href: kusto/functions-library/series-moving-avg-udf.md
+        - name: series_rolling_udf()
+          href: kusto/functions-library/series-rolling-udf.md
 - name: Ressources
   items:
     - name: Blog
