--- a/data-explorer/breadcrumb/toc.yml
+++ b/data-explorer/breadcrumb/toc.yml
@@ -9,3 +9,24 @@
         - name: Kusto
           tocHref: /azure/data-explorer/kusto/
           topicHref: /azure/data-explorer/kusto/
+- name: Azure
+  tocHref: /sql/
+  topicHref: /azure/index
+  items:
+    - name: Explorateur de données Azure
+      tocHref: /sql/azure-data-studio/
+      topicHref: /azure/data-explorer/index
+- name: Azure
+  tocHref: /azure/
+  topicHref: /azure/index
+  items:
+    - name: Explorateur de données Azure
+      tocHref: /azure/azure-monitor/insights/
+      topicHref: /azure/data-explorer/index
+- name: Azure
+  tocHref: /azure/
+  topicHref: /azure/index
+  items:
+    - name: Explorateur de données Azure
+      tocHref: /azure/synapse-analytics/
+      topicHref: /azure/data-explorer/index
