--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -96,42 +96,57 @@
           href: lightingest.md
         - name: Event Hub
           items:
-            - name: Créer une connexion à Event Hub
+            - name: "Connexion de données Event\_Hub"
+              displayName: ingest
               href: ingest-data-event-hub-overview.md
             - name: Portail Azure
+              displayName: 'Event Hub, ingest, data connection'
               href: ingest-data-event-hub.md
             - name: C#
+              displayName: 'Event Hub, ingest, data connection'
               href: data-connection-event-hub-csharp.md
             - name: Python
+              displayName: 'Event Hub, ingest'
               href: data-connection-event-hub-python.md
             - name: "Modèle Azure\_Resource\_Manager"
+              displayName: 'Event Hub, ingest, data connection'
               href: data-connection-event-hub-resource-manager.md
         - name: Event Grid
           items:
-            - name: Créer une connexion à Event Grid
+            - name: "Connexion de données Event\_Grid"
+              displayName: ingest
               href: ingest-data-event-grid-overview.md
             - name: Portail Azure
+              displayName: 'Event Grid, ingest, data connection'
               href: ingest-data-event-grid.md
             - name: C#
+              displayName: 'Event Grid, ingest, data connection'
               href: data-connection-event-grid-csharp.md
             - name: Python
+              displayName: 'Event Grid, ingest, data connection'
               href: data-connection-event-grid-python.md
             - name: "Modèle Azure\_Resource\_Manager"
+              displayName: 'Event Grid, ingest, data connection'
               href: data-connection-event-grid-resource-manager.md
             - name: Créer des ressources manuellement dans le portail Azure
-              displayName: Manually create resources for Event Grid ingestion
+              displayName: 'Manually create resources for Event Grid ingestion, Ingest'
               href: ingest-data-event-grid-manual.md
         - name: IoT Hub
           items:
-            - name: Créer une connexion à IoT Hub
+            - name: "Connexion de données IoT\_Hub"
+              displayName: ingest
               href: ingest-data-iot-hub-overview.md
             - name: Portail Azure
+              displayName: 'IoT Hub, ingest, data connection'
               href: ingest-data-iot-hub.md
             - name: C#
+              displayName: 'IoT Hub, ingest, data connection'
               href: data-connection-iot-hub-csharp.md
             - name: Python
+              displayName: 'IoT Hub, ingest, data connection'
               href: data-connection-iot-hub-python.md
             - name: "Modèle Azure\_Resource\_Manager"
+              displayName: 'IoT Hub, ingest, data connection'
               href: data-connection-iot-hub-resource-manager.md
         - name: Azure Data Factory
           items:
