--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -72,6 +72,8 @@
           href: create-cluster-database-csharp.md
         - name: Python
           href: create-cluster-database-python.md
+        - name: Go
+          href: create-cluster-database-go.md
         - name: "Modèle Azure\_Resource\_Manager"
           href: create-cluster-database-resource-manager.md
     - name: Créer une table
@@ -168,6 +170,8 @@
               href: node-ingest-data.md
             - name: Kit de développement logiciel (SDK) Go
               href: go-ingest-data.md
+            - name: Kit de développement logiciel (SDK) Java
+              href: java-ingest-data.md
         - name: Kafka
           href: ingest-data-kafka.md
         - name: Logstash
@@ -246,6 +250,8 @@
               href: vnet-deploy-troubleshoot.md
             - name: Créer un point de terminaison privé pour votre cluster de réseau virtuel - Portail
               href: vnet-create-private-endpoint.md
+            - name: Créer un point de terminaison privé ou de service pour les ressources utilisées par les connexions de données
+              href: vnet-endpoint-storage-event-hub.md
         - name: Chiffrement
           items:
             - name: Chiffrement de disque de cluster - portail
