--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -201,6 +201,8 @@
           href: data-lake-query-data.md
         - name: Interroger des données dans Azure Monitor
           href: query-monitor-data.md
+        - name: Interroger des données dans une application Power Apps
+          href: power-apps-connector.md
         - name: Déboguer le code Python inline de KQL
           href: debug-inline-python.md
         - name: Utilisation des kits SDK
@@ -370,8 +372,6 @@
           href: using-metrics.md
         - name: Utiliser Resource Health pour superviser l’intégrité du cluster
           href: monitor-with-resource-health.md
-        - name: Créer une application Power Apps pour interroger des données dans Azure Data Explorer
-          href: power-apps-connector.md
     - name: Partager des données
       items:
         - name: Utiliser Azure Data Share
@@ -912,6 +912,8 @@
           href: ./kusto/query/ipv4-comparefunction.md
         - name: ipv4_is_match()
           href: ./kusto/query/ipv4-is-matchfunction.md
+        - name: ipv4_is_private()
+          href: ./kusto/query/ipv4-is-privatefunction.md
         - name: ipv6_compare()
           href: ./kusto/query/ipv6-comparefunction.md
         - name: ipv6_is_match()
@@ -1845,6 +1847,8 @@
           href: kusto/functions-library/quantize-fl.md
         - name: series_dot_product_fl()
           href: kusto/functions-library/series-dot-product-fl.md
+        - name: series_exp_smoothing_fl()
+          href: kusto/functions-library/series-exp-smoothing-fl.md
         - name: series_fit_poly_fl()
           href: kusto/functions-library/series-fit-poly-fl.md
         - name: series_moving_avg_fl()
